feat: add support for RabbitMQ mandatory property (#145)
* feat: add mandatory property

* break circular dependency

* feat: implement UnroutableMessageProcessor and refactor message handling

* docs: add mandatory property documentation

* docs: mandatory property documentation is translated into English

* docs: improve formatting and readability of mandatory property documentation

* build: update dependencies

* build: update version in gradle.properties

* Update main.gradle

---------

Co-authored-by: lugomez <lugomez@bancolombia.com.co>
Co-authored-by: Juan C Galvis <8420868+juancgalvis@users.noreply.github.com>